--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
+    "start": "npm run services:up && nest start",
     "start:dev": "npm run services:up && nest start --watch",
-    "start:debug": "nest start --debug --watch",
+    "start:debug": "npm run services:up && nest start --debug --watch",
     "start:prod": "node dist/main",
     "services:stop": "docker compose -f docker-compose.yml stop",
     "services:up": "docker compose -f docker-compose.yml up -d",
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.15.1",
