--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "services:stop": "docker compose -f docker-compose.yml stop",
     "services:up": "docker compose -f docker-compose.yml up -d",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "test:cov": "vitest run --coverage",
-    "test:debug": "vitest --inspect-brk --inspect --logHeapUsage --threads=false",
-    "test:e2e": "vitest run --config ./vitest.config.e2e.ts"
+    "test": "npm run services:up && vitest run",
+    "test:watch": "npm run services:up && vitest",
+    "test:cov": "npm run services:up && vitest run --coverage",
+    "test:debug": "npm run services:up && vitest --inspect-brk --inspect --logHeapUsage --threads=false",
+    "test:e2e": "npm run services:up && vitest run --config ./vitest.config.e2e.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -45,6 +45,7 @@
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitest/coverage-v8": "^1.6.0",
@@ -55,6 +56,7 @@
     "prettier": "^3.0.0",
     "prisma": "^5.15.1",
     "source-map-support": "^0.5.21",
+    "supertest": "^7.0.0",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3",
